--- a/css/mycss.css
+++ b/css/mycss.css
@@ -95,4 +95,7 @@ a:hover{
     border:gray ridge;
     background-color: black;
     width: 100px;
+    height:50px;
+    padding-top:20px;
+    padding-left:20;
 }
